# backend/bracket/routes/stage_items.py
@@ -117,12 +117,16 @@ async def update_stage_item(
 
     query = """
         UPDATE stage_items
-        SET name = :name
+        SET name = :name, pairing_mode = :pairing_mode
         WHERE stage_items.id = :stage_item_id
     """
     await database.execute(
         query=query,
-        values={"stage_item_id": stage_item_id, "name": stage_item_body.name},
+        values={
+            "stage_item_id": stage_item_id,
+            "name": stage_item_body.name,
+            "pairing_mode": stage_item_body.pairing_mode.value,
+        },
     )
     await recalculate_ranking_for_stage_item(tournament_id, stage_item)
     if stage_item.type == StageType.SINGLE_ELIMINATION:
